--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ author:
   location         : "Hangzhou, Zhejiang Province"
   employer         : "Liaoning University of Technology"
   uri              : https://bitforest-yy.github.io/ # URL
-  1240856316@qq.com: "1240856316@qq.com" 
+  Email            : "1240856316@qq.com" 
 
   # Academic websites
   academia         : # URL
