--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   avatar           : "profile.png"
   name             : "Yang jia"
   pronouns         : # example: "she/her"  
-  bio              : "Fighting Enthusiasm"
+  bio              : "Enthusiasm"
   location         : "Hangzhou, Zhejiang Province"
   employer         : "Liaoning University of Technology"
   uri              : https://bitforest-yy.github.io/ # URL
